--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.1.7",
     "autoprefixer": "^10.4.21",
     "html5-qrcode": "^2.3.8",
+    "jsbarcode": "^3.11.6",
+    "lucide-react": "^0.510.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
