--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "autoprefixer": "^10.4.21",
+    "file-saver": "^2.0.5",
     "html5-qrcode": "^2.3.8",
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.510.0",
@@ -20,7 +21,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
