--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "file-saver": "^2.0.5",
     "html5-qrcode": "^2.3.8",
     "jsbarcode": "^3.11.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.510.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7",
     "xlsx": "^0.18.5"
   },
